objects/Case_TimeLine_Status__mdt.object
<CustomObject>
    <fields>
        <fullName>Indice__c</fullName>
        <label>Índice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Icon__c</fullName>
        <inlineHelpText>List of icons to choose: https://getbootstrap.com/docs/3.3/components/#glyphicons-glyphs</inlineHelpText>
        <label>Status Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Label__c</fullName>
        <label>Status Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Value__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Status Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Case TimeLine Status</label>
    <pluralLabel>Case TimeLine Status</pluralLabel>
</CustomObject>